[gd_scene load_steps=8 format=2]

[ext_resource path="res://scripts/Interactable.gd" type="Script" id=1]
[ext_resource path="res://shader/outline_shadermaterial.tres" type="Material" id=2]
[ext_resource path="res://assets/ui/dialog_close.png" type="Texture" id=3]
[ext_resource path="res://nodes/Dialog/Dialog.tscn" type="PackedScene" id=4]

[sub_resource type="CapsuleShape" id=1]
radius = 0.668553
height = 0.630013

[sub_resource type="PlaneMesh" id=2]

[sub_resource type="SpatialMaterial" id=3]
flags_transparent = true
albedo_texture = ExtResource( 3 )

[node name="Interactable" type="KinematicBody" groups=[
"interactable",
]]
script = ExtResource( 1 )
sprite_path = NodePath("Sprite")
outline_material = ExtResource( 2 )
dialog_path = NodePath("Dialog")
description = "This can be anything"

[node name="CollisionShape" type="CollisionShape" parent="."]
transform = Transform( 1, 0, 0, 0, -4.37114e-008, -1, 0, 1, -4.37114e-008, 0, 0, 0 )
shape = SubResource( 1 )

[node name="Sprite" type="MeshInstance" parent="."]
transform = Transform( 1, 0, 0, 0, -4.37114e-008, -1, 0, 1, -4.37114e-008, 0, 0, 0 )
mesh = SubResource( 2 )
material/0 = SubResource( 3 )

[node name="Dialog" parent="." instance=ExtResource( 4 )]
[connection signal="input_event" from="." to="." method="_on_event"]
[connection signal="mouse_entered" from="." to="." method="_on_mouse_hover"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exit"]
